Fix table spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,8 @@ h1,
 h2,
 h3,
 p,
-a {
+a,
+table {
   font-family: "EB Garamond", "Times New Roman", serif, system-ui;
   font-optical-sizing: auto;
   font-weight: 200;
@@ -69,7 +70,6 @@ td {
 
 th,
 td {
-  padding: 0.5em;
   border: none;
 }
 
@@ -122,7 +122,7 @@ tbody tr:hover {
 
   td,
   th {
-    padding-bottom: 1em;
+    padding: 0.5em;
   }
 
   td:not(:last-child):after {
